--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -13,14 +13,9 @@ img {
 }
 
 .display-container {
-   // background-image: url('/Users/Dolpator/TIY/assignments/Assignment-21-GART/public/images/images.jpeg');
-   // background-repeat: none;
   background: #16BFFD;
-  /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #16BFFD, #CB3066);
-  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #16BFFD, #CB3066);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   margin: 0;
   color: #FFF;
   text-shadow: 4px 4px 8px #000000;
@@ -96,6 +91,7 @@ p{
    background: #E55D87; /* fallback for old browsers */
    background: -webkit-linear-gradient(to left, #E55D87 , #5FC3E4); /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to left, #E55D87 , #5FC3E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   padding: 20px;
       li{
          margin-top: 40px;
          font-size: 20px;
@@ -107,8 +103,13 @@ p{
          text-align: left;
          color: #FFF;
          img{
+            width: 85%;
+         }
+         a{
+            position: fixed;
+            top: 5%;
+            right: 95%;
 
-            width: 75%;
          }
       }
 }
@@ -118,9 +119,11 @@ p{
    background: -webkit-linear-gradient(to left, #E55D87 , #5FC3E4); /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to left, #E55D87 , #5FC3E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    li{
+      padding: 10px;
       font-size: 20px;
       font-family: fantasy;
       text-shadow: 4px 4px 8px #000000;
+      list-style-type: none;
 
 
    }
@@ -141,9 +144,8 @@ p{
 
 }
 .galleryShows{
-   background: #E55D87; /* fallback for old browsers */
-   background: -webkit-linear-gradient(to left, #E55D87 , #5FC3E4); /* Chrome 10-25, Safari 5.1-6 */
-   background: linear-gradient(to left, #E55D87 , #5FC3E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+   background-color: #3498db;
 }
 
 /*# sourceMappingURL=styles.css.map */
