changes to GART

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -143,9 +143,10 @@ p{
    border-radius: 25px;
 
 }
-.galleryShows{
+.galleryshows{
 
    background-color: #3498db;
+   color: #FFF;
 }
 
 /*# sourceMappingURL=styles.css.map */
