--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -375,9 +375,8 @@ img {
   font-family: Helvetica, sans-serif; }
 
 .display-container {
-  background: #16BFFD;
-  background: -webkit-linear-gradient(to left, #16BFFD, #CB3066);
-  background: linear-gradient(to left, #16BFFD, #CB3066);
+  background: url("/images/mainpageImg.jpeg") no-repeat fixed;
+  background-size: contain;
   margin: 0;
   color: #FFF;
   text-shadow: 4px 4px 8px #000000; }
@@ -393,7 +392,7 @@ p {
 
 .appName {
   font-size: 50px;
-  color: #FFF;
+  color: #000;
   text-shadow: 2px 2px 4px #000000;
   font-family: fantasy; }
 
@@ -415,6 +414,9 @@ p {
   border-radius: 25px;
   text-shadow: 4px 4px 8px #000000; }
 
+.thumbnail {
+  width: 20%; }
+
 .artist {
   padding: 10px;
   background-color: #F9690E;
@@ -423,14 +425,14 @@ p {
   text-shadow: 4px 4px 8px #000000; }
 
 .createShow {
-  padding: 10px;
+  padding: 7px;
   background-color: #8E44AD;
   color: #FFF;
   border-radius: 25px;
   text-shadow: 4px 4px 8px #000000; }
 
 .showGalleries {
-  padding: 10px;
+  padding: 7px;
   background-color: #86E2D5;
   color: #FFF;
   border-radius: 25px;
@@ -443,9 +445,13 @@ p {
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #E55D87, #5FC3E4);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  padding: 20px; }
+  padding: 5px;
+  margin-top: 5px;
+  border-radius: 15px;
+  display: inline-block; }
+  .galleryList img {
+    width: 50%; }
   .galleryList li {
-    margin-top: 40px;
     font-size: 20px;
     font-family: fantasy;
     text-shadow: 4px 4px 8px #000000;
@@ -454,12 +460,32 @@ p {
     height: 250px;
     text-align: left;
     color: #FFF; }
-    .galleryList li img {
-      width: 85%; }
     .galleryList li a {
       position: fixed;
       top: 5%;
       right: 95%; }
+
+.maryMartinPic {
+  background-image: url("images/download.jpeg") no-repeat center center fixed; }
+
+.maryMartinText {
+  width: 20%;
+  background: #FFF;
+  opacity: 0; }
+
+.maryMartinPic:hover .maryMartinText {
+  opacity: 0.6;
+  text-align: justify;
+  color: #000000;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: fantasy, sans-serif;
+  padding: 30px; }
+
+.galleryListBg {
+  background: url("/Users/Dolpator/TIY/assignments/Assignment-21-GART/public/images/mainpageImg.jpeg") no-repeat center;
+  background-size: cover;
+  height: 100vh; }
 
 .artistList {
   background: #E55D87;
@@ -467,13 +493,21 @@ p {
   background: -webkit-linear-gradient(to left, #E55D87, #5FC3E4);
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #E55D87, #5FC3E4);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-size: cover;
+  margin-top: 50px; }
   .artistList li {
-    padding: 10px;
+    padding: 30px;
     font-size: 20px;
+    color: #FFF;
     font-family: fantasy;
     text-shadow: 4px 4px 8px #000000;
-    list-style-type: none; }
+    list-style-type: none;
+    display: inline-block; }
+    .artistList li img {
+      width: 100%; }
+    .artistList li h1 {
+      color: #FFF; }
 
 #new-gallery-form {
   color: #FFF;
@@ -491,8 +525,9 @@ p {
   padding: 10px;
   border-radius: 25px; }
 
-.galleryShows {
-  background-color: #3498db; }
+.galleryshows {
+  background-color: #3498db;
+  color: #FFF; }
 
 /*# sourceMappingURL=styles.css.map */
 
