--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box; }
 
 img {
-   width: 100%;
+  width: 100%;
   display: block; }
 
 #app-container {
@@ -82,7 +82,7 @@ p{
 }
 
 .showGalleries{
-   padding: 7px;
+  padding: 7px;
   background-color: #86E2D5;
   color: #FFF;
   border-radius: 25px;
@@ -98,7 +98,11 @@ p{
    margin-top: 5px;
    border-radius: 15px;
    display: inline-block;
-
+   i {
+      position: fixed;
+      top: 5px;
+      right: 5px; }
+}
       li{
          font-size: 20px;
          font-family: fantasy;
@@ -115,39 +119,22 @@ p{
             position: fixed;
             top: 5%;
             right: 95%;
-
          }
-      }
+
  }
-// .maryMartinPic{
-//    background-image: url('images/download.jpeg') no-repeat center center fixed;
-// }
-// .maryMartinText{
-//    width: 20%;
-// 	background:#FFF;
-// 	opacity:0;
-// }
-// .maryMartinPic:hover .maryMartinText{
-// 	opacity:0.6;
-// 	text-align:justify;
-// 	color:#000000;
-// 	font-size:20px;
-// 	font-weight:700;
-// 	font-family: fantasy, sans-serif;
-// 	padding:30px;
-// }
-.galleryListBg{
-   background: url('/Users/Dolpator/TIY/assignments/Assignment-21-GART/public/images/mainpageImg.jpeg')no-repeat center;
-   background-size: cover;
-   height: 100vh;
-}
+
 .artistList{
 
    background: #E55D87; /* fallback for old browsers */
    background: -webkit-linear-gradient(to left, #E55D87 , #5FC3E4); /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to left, #E55D87 , #5FC3E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    background-size: cover;
-   margin-top:50px;
+   margin-top: 50px;
+   i {
+      position: fixed;
+      top: 5px;
+      right: 5px; }
+}
    li{
       padding: 30px;
       font-size: 20px;
@@ -163,7 +150,6 @@ p{
          color: #FFF
       }
 
-   }
 }
 
 #new-gallery-form{
@@ -178,12 +164,17 @@ p{
    margin-top: 40px;
    padding: 10px;
    border-radius: 25px;
-
+   position: relative;
 }
 .galleryshows{
 
    background-color: #3498db;
    color: #FFF;
+   i {
+      position: fixed;
+      top: 5px;
+      right: 5px; }
 }
+
 
 /*# sourceMappingURL=styles.css.map */
