--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -9,21 +9,22 @@
 
       #app-container {
          font-family: Helvetica, sans-serif;
+         background: #2ecc71;
 
       }
 
       .display-container {
-         background: url('/images/mainpageImg.jpeg') no-repeat fixed;
+         background: #2ecc71;
          background-size: cover;
          margin: 0;
          color: #FFF;
-         text-shadow: 4px 4px 8px #000000;
+         text-shadow: 2px 2px #000000;
 
          h1{
             font-size: 60px;
             color: #FFF;
             text-shadow: 2px 2px 4px #000000;
-            font-family: fantasy;
+            font-family: 'Raleway', sans-serif;
          }
          p{
             font-size: 30px;
@@ -43,7 +44,7 @@
          font-size: 20px;
          font-weight: 300px;
 
-         text-shadow: 4px 4px 8px #000000;
+         text-shadow: 2px 2px #000000;
       }
 
 
@@ -52,7 +53,7 @@
          color: #FFF;
          font-size: 20px;
          font-weight: 300px;
-         text-shadow: 4px 4px 8px #000000;
+         text-shadow: 2px 2px #000000;
 
       }
 
@@ -60,7 +61,7 @@
          color: #FFF;
          font-size: 20px;
          font-weight: 300px;
-         text-shadow: 4px 4px 8px #000000;
+         text-shadow: 2px 2px #000000;
 
       }
 
@@ -68,7 +69,7 @@
          color: #FFF;
          font-size: 20px;
          font-weight: 300px;
-         text-shadow: 4px 4px 8px #000000;
+         text-shadow: 2px 2px #000000;
       }
 
       .galleryList{
@@ -82,7 +83,7 @@
             width: 70%;
          }
          h1, p{
-            font-family: fantasy;
+            font-family: 'Raleway', sans-serif;
             color: #fff;
          }
          i {
@@ -94,7 +95,7 @@
          li{
             font-size: 20px;
 
-            text-shadow: 4px 4px 8px #000000;
+            text-shadow: 2px 2px #000000;
             list-style-type: none;
             display: inline-block;
             height: 250px;
@@ -120,7 +121,7 @@
          width: 70%;
       }
       h1, p{
-         font-family: fantasy;
+         font-family: 'Raleway', sans-serif;
          color: #fff;
       }
       i {
@@ -325,9 +326,8 @@
          padding: 30px;
       }
       .artistList{
-         background: #E55D87; /* fallback for old browsers */
-         background: -webkit-linear-gradient(to left, #E55D87 , #5FC3E4); /* Chrome 10-25, Safari 5.1-6 */
-         background: linear-gradient(to left, #E55D87 , #5FC3E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+         background: #2ecc71;
+         background: #2ecc71;
          background-size: cover;
          margin: 0;
          i {
@@ -339,8 +339,8 @@
             padding: 30px;
             font-size: 20px;
             color: #FFF;
-            font-family: fantasy;
-            text-shadow: 4px 4px 8px #000000;
+            font-family: 'Raleway', sans-serif;
+            text-shadow: 2px 2px #000000;
             list-style-type: none;
             display: inline-block;
             img{
@@ -355,7 +355,7 @@
          #new-gallery-form{
             font-size: 15px;
             color: #FFF;
-            text-shadow: 4px 4px 8px #000000;
+            text-shadow: 2px 2px #000000;
 
          }
          #auth-form{
@@ -369,9 +369,7 @@
          }
 
          .galleryshows{
-            background: #E55D87; /* fallback for old browsers */
-            background: -webkit-linear-gradient(to left, #E55D87 , #5FC3E4); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to left, #E55D87 , #5FC3E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background: #2ecc71;
             background-size: cover;
             color: #FFF;
             margin-top: 10px;
